<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <LinearLayout-->
<!--        android:layout_width="400dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="1dp"-->
<!--        android:layout_marginTop="300dp"-->
<!--        android:layout_marginEnd="1dp"-->
<!--        android:layout_marginBottom="1dp"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="100dp"-->
<!--            android:orientation="horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/button11"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Button" />-->

<!--            <Button-->
<!--                android:id="@+id/button13"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Button" />-->

<!--            <Button-->
<!--                android:id="@+id/button14"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Button" />-->

<!--            <Button-->
<!--                android:id="@+id/button15"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Button" />-->

<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/logText"
        android:layout_width="136dp"
        android:layout_height="108dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="193dp"
        android:gravity="center"
        android:text="@string/log"
        android:textSize="85sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <EditText
        android:id="@+id/x"
        android:layout_width="80dp"
        android:layout_height="63dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/type_base"
        android:textSize="25sp"
        android:background="@drawable/back"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b"
        app:layout_constraintStart_toEndOf="@+id/logText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        android:autofillHints="@string/type_base" />

    <EditText
        android:id="@+id/b"
        android:layout_width="0dp"
        android:layout_height="102dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/back"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/type_exponent"
        android:inputType="number"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/x"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/type_exponent" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/input_complete"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:id="@+id/resText"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/back"
        android:gravity="center"
        android:hint="@string/result_here"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/logText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/auto2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="82dp"
        android:text="@string/auto2fill"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toStartOf="@+id/auto10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/auto10"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="82dp"
        android:text="@string/auto10fill"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toStartOf="@+id/delAll"
        app:layout_constraintStart_toEndOf="@+id/auto2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delAll"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="82dp"
        android:text="@string/del_all"
        app:layout_constraintBottom_toTopOf="@+id/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/auto10"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>